fix scrollbar overflow
add mixin

--- a/src/components/CommentsList/CommentList.module.sass
+++ b/src/components/CommentsList/CommentList.module.sass
@@ -8,21 +8,7 @@
   overflow-y: auto
   scrollbar-width: thin
   scrollbar-color: rgba(0, 0, 0, 0.3) transparent
-
-  &::-webkit-scrollbar-button
-    display: none !important
-    height: 0 !important
-    width: 0  !important
-
-  //border: 1px solid lighten($shades1,30)
-  //box-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.05)
-  &::-webkit-scrollbar
-    width: 5px
-  &::-webkit-scrollbar-track
-    background: transparent /* Прозрачный фон */
-  &::-webkit-scrollbar-thumb
-    background: rgba(0, 0, 0, 0.3) /* Серый цвет как на первом скриншоте */
-    border-radius: 3px /* Легкое скругление углов */
+  @include custom-scrollbar
 
 
 .container
