--- a/src/styles/helpers.sass
+++ b/src/styles/helpers.sass
@@ -216,3 +216,20 @@ $shades4: rgba(#111315, .5)
         color: $p3
 a
     color: $n7
+
+@mixin custom-scrollbar
+    scrollbar-width: thin
+    scrollbar-color: rgba(0, 0, 0, 0.3) transparent
+    &::-webkit-scrollbar
+        width: 5px
+    &::-webkit-scrollbar-track
+        background: transparent !important
+    &::-webkit-scrollbar-thumb
+        background: rgba(0, 0, 0, 0.3) !important
+        border-radius: 3px !important
+        border: none !important
+    &::-webkit-scrollbar-button:vertical:start:decrement,
+    &::-webkit-scrollbar-button:vertical:end:increment,
+    &::-webkit-scrollbar-button:horizontal:start:decrement,
+    &::-webkit-scrollbar-button:horizontal:end:increment
+        display: none !important
